cluster/zwave-js-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels:
    name: zwave
  name: zwave
  namespace: zwave
spec:
  replicas: 1
  selector:
    matchLabels:
      name: zwave
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: zwave-js-ui
        name: zwave
    spec:
      containers:
      - name: zwave
        image: zwavejs/zwave-js-ui:latest
        livenessProbe:
          failureThreshold: 10
          httpGet:
            httpHeaders:
            - name: Accept
              value: text/plain
            path: /health
            port: http
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        ports:
        - containerPort: 8091
          hostPort: 8091
          name: http
          protocol: TCP
        - containerPort: 3000
          hostPort: 3000
          name: websocket
          protocol: TCP
        resources:
          limits:
            cpu: "1"
            memory: 512Mi
          requests:
            cpu: "1"
            memory: 400Mi
        securityContext:
          allowPrivilegeEscalation: true
          privileged: true
        volumeMounts:
        - mountPath: /dev/zwave
          name: zwavestick
        - mountPath: /usr/src/app/store
          name: data
        # - mountPath: /usr/src/app/store/settings.json <-- if putting your settings.json in a secret
        #   name: config
        #   readOnly: true
        #   subPath: settings.json
#      nodeSelector:
#        kubernetes.io/hostname: stick1 #<--- the name of your cluster node that the zwave usb stick in
      volumes:
      # - name: config <-- if putting your settings.json in a secret
      #   secret:
      #     defaultMode: 420
      #     secretName: zwave-js-ui
      - name: zwavestick
        hostPath:
          # Do not use /dev/ttyUSBX serial devices, as those mappings can change over time.
          # Instead, use the /dev/serial/by-id/X serial device for your Z-Wave stick.
          #path: /dev/serial/by-id/insert_stick_reference_here
          path: /dev/serial/by-id/usb-0658_0200-if00
          type: CharDevice
      - name: data
        persistentVolumeClaim:
          claimName: zwave
#        hostPath:
#          path: /zwave/data
      dnsPolicy: ClusterFirstWithHostNet
      enableServiceLinks: true
      hostNetwork: true
      hostname: zwave
      serviceAccountName: default
      affinity: 
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - {key: "feature.node.kubernetes.io/custom-zwave", operator: In, values: ["true"]}
