cluster/zwave-js-ui/endpoint-tcp.yaml
apiVersion: v1
kind: Endpoints
metadata:
  labels:
    app.kubernetes.io/instance: zwave-js-ui
    name: zwave-tcp
  name: zwave-tcp
  namespace: zwave
subsets:
  - addresses:
      - ip: 192.168.42.44
        targetRef:
          kind: Pod
          namespace: zwave
    ports:
      - name: websocket
        port: 3030
        protocol: TCP
      - name: http
        port: 8091
        protocol: TCP
