cluster/zwave-js-ui/service-tcp.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: zwave-tcp
  name: zwave-tcp
  namespace: zwave
#  annotations:
#    metallb.universe.tf/address-pool: server
#    metallb.universe.tf/allow-shared-ip: zwave
spec:
#  externalIPs:
#    - 192.168.42.28
  ports:
    - port: 8091
      targetPort: 8091
      protocol: TCP
      name: http
    - port: 3030
      targetPort: 3030
      protocol: TCP
      name: websocket
  selector:
    name: zwave
#  type: ClusterIP
  type: LoadBalancer
  loadBalancerIP: 192.168.42.28
