cluster/zwave-js-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zwave
spec:
  rules:
    - host: zwave.thomitzek.net
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: zwave
              port: 
                name: http
